--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,18 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <Button
+        android:id="@+id/previous_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/arrow_left"
+        app:iconGravity="end"
+        android:text="@string/previous_button"
+        />
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
@@ -38,6 +50,7 @@
         android:text="@string/next_button"
         app:icon="@drawable/arrow_right"
         app:iconGravity="end" />
+</LinearLayout>
 
 </LinearLayout>
 
